<resources>
    <string name="app_name">CoffeeShop2v</string>

    <!--Intro Fragment-->
    <string name="introFragmentTitleText">Find the best coffee\n for you</string>
    <string name="introFragmentSubtitleText">Good Morning</string>
    <string name="introFragmentContentDescription">IntroImage</string>
    <string name="introFragmentCoffeeShopText">Coffee Shop</string>

    <!--Main Fragment-->
    <string name="mainFragmentTitleText">Select Category</string>
    <string name="mainFragmentMenuItemTextIceDrink">Ice Drink</string>
    <string name="mainFragmentMenuItemTextHotDrink">Hot Drink</string>
    <string name="mainFragmentMenuItemTextHotCoffee">Hot Coffee</string>
    <string name="mainFragmentMenuItemTextIceCoffee">Ice Coffee</string>
    <string name="mainFragmentMenuItemTextBrewingCoffee">Brewing Coffee</string>
    <string name="mainFragmentMenuItemTextShake">Shake</string>
    <string name="mainFragmentMenuItemTextRestaurant">Restaurant</string>
    <string name="mainFragmentMenuItemTextBreakfast">Breakfast</string>
    <string name="mainFragmentMenuItemTextCake">Cake</string>

    <!--List Fragment-->
    <string name="listFragmentMenuTitle">title</string>
    <string name="listFragmentListIsEmptyText">List is Empty</string>

    <!--Recycler View Item-->
    <string name="viewHolderItemTitleText">title</string>
    <string name="viewHolderItemSubtitleText">Subtitle</string>
    <string name="viewHolderItemPriceText">$0</string>

    <!--Detail Fragment-->
    <string name="detailFragmentTitleText">Title</string>
    <string name="detailFragmentSubTitleText">Subtitle</string>
    <string name="detailFragmentPriceText">$0</string>
    <string name="detailFragmentDescriptionText">Description</string>
    <string name="detailFragmentSizeText">Size</string>
    <string name="detailFragmentSizeButtonS">S</string>
    <string name="detailFragmentSizeButtonM">M</string>
    <string name="detailFragmentSizeButtonL">L</string>
    <string name="detailFragmentBuyButton">Buy now</string>

</resources>