<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Fragment.DetailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="48dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/detailFragmentMainImage"
                    android:layout_width="0dp"
                    android:layout_height="400dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/CircleImageView"
                    tools:srcCompat="@tools:sample/avatars" />

                <ImageView
                    android:id="@+id/backButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/middleMargin"
                    android:layout_marginTop="@dimen/middleMargin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/back" />

                <ImageView
                    android:id="@+id/favButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/middleMargin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/backButton"
                    app:srcCompat="@drawable/favorite_white" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="@dimen/middleMargin"
                android:background="@drawable/dark_grey_bg">

                <TextView
                    android:id="@+id/detailFragmentTitleText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/middleMargin"
                    android:layout_marginTop="@dimen/middleMargin"
                    android:text="@string/detailFragmentTitleText"
                    android:textColor="@color/white"
                    android:textSize="@dimen/largeText"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/detailFragmentPriceText"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/detailFragmentSubtitleText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/smallMargin"
                    android:text="@string/detailFragmentSubTitleText"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/detailFragmentTitleText"
                    app:layout_constraintTop_toBottomOf="@+id/detailFragmentTitleText" />

                <TextView
                    android:id="@+id/detailFragmentPriceText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/middleMargin"
                    android:layout_marginEnd="@dimen/middleMargin"
                    android:text="@string/detailFragmentPriceText"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/middleText"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/detailFragmentDescriptionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/middleMargin"
                android:text="@string/detailFragmentDescriptionText"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/middleMargin"
                android:text="@string/detailFragmentSizeText"
                android:textColor="@color/white"
                android:textSize="@dimen/middleText"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/smallMargin"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/detailFragmentSizeButtonS"
                    style="@android:style/Widget.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/smallMargin"
                    android:layout_weight="1"
                    android:background="@drawable/orange_stroke_bg"
                    android:text="@string/detailFragmentSizeButtonS"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/middleText" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/detailFragmentSizeButtonM"
                    style="@android:style/Widget.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/smallMargin"
                    android:layout_weight="1"
                    android:background="@drawable/dark_grey_bg2"
                    android:text="@string/detailFragmentSizeButtonM"
                    android:textColor="@color/white"
                    android:textSize="@dimen/middleText" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/detailFragmentSizeButtonL"
                    style="@android:style/Widget.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/smallMargin"
                    android:layout_weight="1"
                    android:background="@drawable/dark_grey_bg2"
                    android:text="@string/detailFragmentSizeButtonL"
                    android:textColor="@color/white"
                    android:textSize="@dimen/middleText" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/detailFragmentBuyButton"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/middleMargin"
                android:background="@drawable/orange_bg"
                android:text="@string/detailFragmentBuyButton"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>