<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp"
    android:background="@drawable/dark_grey_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/viewHolderItemImage"
        android:layout_width="123dp"
        android:layout_height="123dp"
        android:scaleType="centerCrop"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/CircleImageView"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/viewHolderItemTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/viewHolderItemTitleText"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/viewHolderItemImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/viewHolderItemSubtitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/viewHolderItemSubtitleText"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/viewHolderItemTitleTextView"
        app:layout_constraintTop_toBottomOf="@+id/viewHolderItemTitleTextView" />

    <TextView
        android:id="@+id/viewHolderItemPriceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/viewHolderItemPriceText"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/viewHolderItemImage"
        app:layout_constraintStart_toStartOf="@+id/viewHolderItemSubtitleTextView" />


</androidx.constraintlayout.widget.ConstraintLayout>